Fix archive baseurl

--- a/_pages/archive.html
+++ b/_pages/archive.html
@@ -17,7 +17,7 @@ title: articles
         {% endif %}
         {% endunless %}
 
-        <li><a href="{{ site.base.url }}{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
     </ul>
 </section>
