--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title:
+description: Read programming tutorials for beginners, create your own Jekyll website. Learn about Git and GitHub.
 ---
 
 {% for page in paginator.posts %}
