--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Design, Write & Deploy.
-description: Read programming tutorials for beginners, create your own Jekyll website. Learn about Git and GitHub.
+description: I am <a class="orange" href="/pages/about.html">Dennis Grinch</a>. A developer, tutor and a student from Eastbourne, UK.
 ---
 
 {% for page in paginator.posts %}
