--- a/404.html
+++ b/404.html
@@ -1,21 +1,9 @@
 ---
-
 layout: page
-
 title: 404 ERROR
-
 comments: true
-
-category: tutorial
-
-tags:
-
-    - web-development
-
-    - css
-
 permalink: /404.html
-
 ---
-## Sorry, you got lost. ##
-Return to main [Homepage](http://boyangli.com)
+
+## Sorry, you get lost. ##
+Return to [Homepage](http://boyangli.com)
