--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Design, Write & Deploy.
-description: I am Dennis Grinch. A developer, tutor and a student from Eastbourne, UK.
+title: Fork, Clone & Enjoy.
+description: Minimalistic Jekyll theme for your blog. Easy to install and setup.
 ---
 
 {% for page in paginator.posts %}
