Fixed vertical rhytm

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 title: Fork, Clone & Enjoy.
-description: Minimalistic Jekyll theme for your blog. Easy to install and setup.
+description: Minimalistic Jekyll theme for your blog with plenty of features. Easy to install and setup.
 ---
 
 {% for page in paginator.posts %}
 {% include articles.html %}
 {% endfor %}
-
